--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
   </style>
 </head>
 <body>
-  <model-viewer src="model.glb" 
-                ar 
-                camera-controls 
-                auto-rotate 
-                alt="3D Kunstwerk">
-  </model-viewer>
+<model-viewer src="model.glb" 
+              ios-src="model.usdz" 
+              ar 
+              ar-modes="scene-viewer quick-look webxr" 
+              camera-controls 
+              auto-rotate 
+              alt="3D Kunstwerk">
+</model-viewer>
+
 </body>
 </html>
