--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <model-viewer src="model.glb" 
               ios-src="model.usdz" 
               ar 
-              ar-modes="scene-viewer quick-look webxr" 
+              ar-modes="quick-look" 
               camera-controls 
               auto-rotate 
               alt="3D Kunstwerk">
