--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <script>
+  document.addEventListener("DOMContentLoaded", function() {
+    var isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
+    if (isIOS) {
+      window.location.href = "model.usdz";
+    }
+  });
+</script>
   <title>Mein AR-Kunstwerk</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
