--- a/index.html
+++ b/index.html
@@ -2,30 +2,31 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <title>AR Kunstwerk</title>
   <script>
-  document.addEventListener("DOMContentLoaded", function() {
-    var isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
-    if (isIOS) {
-      window.location.href = "model.usdz";
-    }
-  });
-</script>
-  <title>Mein AR-Kunstwerk</title>
-  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+    document.addEventListener("DOMContentLoaded", function() {
+      // Prüfe, ob der Nutzer ein iOS-Gerät verwendet
+      var isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
+
+      if (isIOS) {
+        // iPhone oder iPad: direkt AR Quick Look (.usdz) starten
+        window.location.href = "model.usdz";
+      } else {
+        // Android oder Desktop: zeige alternativ das .glb oder eine Infoseite
+        window.location.href = "model.glb";
+      }
+    });
+  </script>
   <style>
-    body { margin: 0; background: #fff; }
-    model-viewer { width: 100%; height: 100vh; }
+    body { 
+      font-family: Arial, sans-serif; 
+      text-align: center; 
+      padding-top: 40vh; 
+      background: #fff; 
+    }
   </style>
 </head>
 <body>
-<model-viewer src="model.glb" 
-              ios-src="model.usdz" 
-              ar 
-              ar-modes="quick-look" 
-              camera-controls 
-              auto-rotate 
-              alt="3D Kunstwerk">
-</model-viewer>
-
+  <p>Lade AR-Kunstwerk…</p>
 </body>
 </html>
